# Roar_net_app

./: README.md
API_Implementation/: delete_half.py  marimo.py  marimo.toml  marimo_interface.py  output_chart.html  requirements.txt  runs.txt  test.py
API_Implementation/__marimo__/: marimo.html  marimo.ipynb
API_Implementation/problem_models_package/: __init__.py  pyproject.toml
API_Implementation/problem_models_package/src/: __init__.py
API_Implementation/pypy-venv/: pyvenv.cfg
API_Implementation/quarto/: test.html  test.qmd  test.quarto_ipynb
API_Implementation/roar_net_api_package/: pyproject.toml
API_Implementation/roar_net_api_package/src/: __init__.py
API_Implementation/roar_net_api_package/src/roar_net_api/algos/: __init__.py  best_improvement.py  iterated_local_search.py  simulated_annealing.py
API_Implementation/roar_net_api_package/src/roar_net_api/api/: custom_logger.py  generator_utils.py  utils.py
API_Implementation/roar_net_api_package/tests/: test_solution.py
API_Implementation/runs/metric_logs/: DSJC125.5_1.csv  DSJC125.5_22.csv
API_Implementation/runs/solution_files/: DSJC125.5_1.sol  DSJC125.5_10.sol  DSJC125.5_11.sol  DSJC125.5_12.sol  DSJC125.5_13.sol  DSJC125.5_14.sol  DSJC125.5_15.sol  DSJC125.5_16.sol  DSJC125.5_17.sol  DSJC125.5_18.sol  DSJC125.5_19.sol  DSJC125.5_2.sol  DSJC125.5_20.sol  DSJC125.5_21.sol  DSJC125.5_22.sol  DSJC125.5_3.sol  DSJC125.5_4.sol  (+5 more)
API_Implementation/verifier_src/: Makefile  bin2asc.c  bin2asc.h  checker.c  checker.h  coloring-verifier  globals.h  main.c  options.opag.c  utilities.c  utilities.h
(+36 files in other folders)
